--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.16",
+    "@prisma/client": "^6.3.1",
+    "next": "^14.2.24",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2"
@@ -20,6 +21,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
+    "prisma": "^6.3.1",
     "typescript": "^5"
   }
 }
