--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^6.4.1",
+    "client": "^0.0.1",
     "next": "^14.2.24",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.54.2"
+    "react-hook-form": "^7.54.2",
+    "react-select": "^5.10.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -21,7 +23,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
-    "prisma": "^6.3.1",
+    "prisma": "^6.4.1",
     "typescript": "^5"
   }
 }
