--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@prisma/client": "^6.4.1",
-    "client": "^0.0.1",
+    "@supabase/supabase-js": "^2.49.3",
+    "cookie": "^1.0.2",
     "next": "^14.2.24",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
-    "react-select": "^5.10.1"
+    "react-select": "^5.10.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
