--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-select": "^5.10.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
