--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@prisma/client": "^6.4.1",
     "@supabase/supabase-js": "^2.49.3",
+    "@tailwindcss/postcss": "^4.0.17",
     "cookie": "^1.0.2",
     "next": "^14.2.24",
+    "postcss": "^8.5.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-select": "^5.10.1",
     "socket.io-client": "^4.8.1",
+    "tailwindcss": "^4.0.17",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
