--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.54.2",
     "react-select": "^5.10.1",
     "socket.io-client": "^4.8.1",
+    "swr": "^2.3.3",
     "tailwindcss": "^4.0.17",
     "uuid": "^11.1.0"
   },
